2002-10-28  Andreas Kupries  <andreask@activestate.com>

	* library/dde1.1/pkgIndex.tcl:
	* library/reg1.0/pkgIndex.tcl: Changed the hardwired debug suffix
	  (d) to the correct suffix (g).

2002-10-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* The changes below update the windows side to the extended
	  --enable-symbols option as used by Tk 8.3.5 and Tcl/Tk 8.4.1.

	* win/configure.in: Removed SC_ENABLE_MEMDEBUG.
	* win/Makefile.in (CFLAGS):  Removed @MEM_DEBUG_FLAGS@.
	* win/tcl.m4: Removed SC_ENABLE_MEMDEBUG. Using SC_ENABLE_SYMBOLS
	  definition found in unix/tcl.m4 now.

2002-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (dist): add any mac/tcl*.sea.hqx files

	************************
	****  8.3.5 TAGGED  ****
	************************

	* changes: updated for 8.3.5 release

2002-10-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure: Regen.
	* win/configure.in: Set CFLAGS to "" if the user
	did not set CFLAGS in the env. This keeps AC_PROG_CC
	from adding "-g -O2" to the CFLAGS by default. (dejong)

2002-10-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:                 add workaround for cygwin windres
	* win/tcl.m4 (SC_CONFIG_CFLAGS): problem. [Patch #624010] (howell)

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:            updated to 8.3.5 patchlevel
	* generic/tcl.h:     with readmes pointing to www.tcl.tk
	* mac/README:
	* tools/tcl.wse.in:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure:
	* win/configure.in:

	* unix/configure:
	* unix/tcl.m4: updated platform targets to match 8.4 fixes.

	backport of cygwin build support cobbled together.
	[Patch #622183] (hobbs, howell, khan, dejong)

	* win/configure: regen.
	* win/configure.in: Add configure time test for SEH
	support in the compiler.
	* win/tcl.m4 (SC_PATH_TCLCONFIG): Support one-tree build.
	(SC_PATH_TKCONFIG): Likewise.
	(SC_PROG_TCLSH): Likewise.